--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="Little Lemon"/>
+    <meta property="og:type" content="website">
+    <meta name="description" content="Little Lemon is a restaurant based in the US which focuses on serving traditional and mediterranean cuisines with a modern twist.">
+    <meta property="og:url" content="https://www.LittleLemon.com">
+    <meta property="og:image" content="../src/assets/Little-lemon-logo.jpg">
+    <meta property="og:description" content="Little Lemon is a restaurant based in the US which focuses on serving traditional and mediterranean cuisines with a modern twist.">
+    <meta property="og:site_name" content="Little Lemon">
+    <meta property="og:locale" content="en_US">
     <meta
       name="description"
       content="Web site created using create-react-app"
