--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@
     <meta property="og:description" content="Little Lemon is a restaurant based in the US which focuses on serving traditional and mediterranean cuisines with a modern twist.">
     <meta property="og:site_name" content="Little Lemon">
     <meta property="og:locale" content="en_US">
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+  
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Markazi+Text:wght@400..700&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
