setup the scrolling and added a little flair

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/Favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta property="og:title" content="Little Lemon"/>
@@ -13,8 +13,8 @@
     <meta property="og:description" content="Little Lemon is a restaurant based in the US which focuses on serving traditional and mediterranean cuisines with a modern twist.">
     <meta property="og:site_name" content="Little Lemon">
     <meta property="og:locale" content="en_US">
-  
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/Asset20@4x.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Asset20@4x.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Markazi+Text:wght@400..700&display=swap" rel="stylesheet">
