--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website">
     <meta name="description" content="Little Lemon is a restaurant based in the US which focuses on serving traditional and mediterranean cuisines with a modern twist.">
     <meta property="og:url" content="https://www.LittleLemon.com">
-    <meta property="og:image" content="../src/assets/Little-lemon-logo.jpg">
+    <meta property="og:image" content="%PUBLIC_URL%/Little-lemon-card.jpg">
     <meta property="og:description" content="Little Lemon is a restaurant based in the US which focuses on serving traditional and mediterranean cuisines with a modern twist.">
     <meta property="og:site_name" content="Little Lemon">
     <meta property="og:locale" content="en_US">
